--- a/index.html
+++ b/index.html
@@ -7,27 +7,52 @@
   </head>
   <body>
     <header class="topbar">
-      <div class="brand">
-        <div class="brand-title">Training Planner</div>
-        <div class="brand-sub" id="subTitle">Loading…</div>
+      <div class="topbar-left">
+        <div class="avatar">J</div>
+        <div class="title-wrap">
+          <div class="app-title" id="appTitle">Training Planner</div>
+          <div class="app-sub" id="subTitle">Loading…</div>
+        </div>
       </div>
-      <nav class="tabs" role="tablist" aria-label="Views">
-        <button class="tab active" data-view="rolling" role="tab">Rolling</button>
-        <button class="tab" data-view="week" role="tab">Week</button>
-        <button class="tab" data-view="stats" role="tab">Stats</button>
-      </nav>
+
+      <div class="topbar-right">
+        <button class="icon-btn" id="refreshBtn" aria-label="Refresh">⟳</button>
+      </div>
     </header>
 
     <main class="container">
-      <!-- Rolling -->
-      <section id="view-rolling" class="view"></section>
+      <!-- TODAY -->
+      <section id="view-today" class="view"></section>
 
-      <!-- Week -->
-      <section id="view-week" class="view hidden"></section>
+      <!-- PLAN -->
+      <section id="view-plan" class="view hidden"></section>
 
-      <!-- Stats -->
+      <!-- ACTIVITIES -->
+      <section id="view-activities" class="view hidden"></section>
+
+      <!-- STATS -->
       <section id="view-stats" class="view hidden"></section>
     </main>
+
+    <!-- Bottom Nav -->
+    <nav class="bottom-nav" role="navigation" aria-label="Bottom navigation">
+      <button class="nav-item active" data-view="today">
+        <div class="nav-ico">☀</div>
+        <div class="nav-txt">Today</div>
+      </button>
+      <button class="nav-item" data-view="plan">
+        <div class="nav-ico">📅</div>
+        <div class="nav-txt">Plan</div>
+      </button>
+      <button class="nav-item" data-view="activities">
+        <div class="nav-ico">📈</div>
+        <div class="nav-txt">Activities</div>
+      </button>
+      <button class="nav-item" data-view="stats">
+        <div class="nav-ico">🏅</div>
+        <div class="nav-txt">Stats</div>
+      </button>
+    </nav>
 
     <!-- Modal -->
     <div id="modalOverlay" class="modal-overlay hidden" aria-hidden="true">
