--- a/styles.html
+++ b/styles.html
@@ -279,6 +279,7 @@
     padding:14px;
     z-index:50;
   }
+   .modal-overlay.hidden{ display:none; }
   .modal{
     width:min(560px, 100%);
     background: linear-gradient(180deg, rgba(22,33,58,.98), rgba(15,23,42,.98));
