--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <nav class="bottom-nav" role="navigation" aria-label="Bottom navigation">
       <button class="nav-item active" data-view="today">
         <div class="nav-ico">☀</div>
-        <div class="nav-txt">Today</div>
+         <div class="nav-txt">Week</div>
       </button>
       <button class="nav-item" data-view="plan">
         <div class="nav-ico">📅</div>
